# cocos-engine-external

./: .gitignore  CMakeLists.txt  ChangeLog.md  versions.txt
android/: Android.mk  CMakeLists.txt  xr.cmake
android/arm64-v8a/include/v8/: v8config.h
android/arm64-v8a/include/websockets/: libwebsockets.h
android/armeabi-v7a/include/anysdk/: ProtocolUser.h
android/armeabi/include/spidermonkey/: js-config.h
android/armeabi/include/websockets/: lws_config.h
android/x86/include/spidermonkey/: js-config.h
android/x86/include/websockets/: lws_config.h
android/x86_64/include/uv/: uv.h
emscripten/: CMakeLists.txt  external-wasm.d.ts
emscripten/box2d/: b2.d.ts  box2d.d.ts  box2d.debug.asm.js  box2d.debug.wasm.js  box2d.debug.wasm.wasm  box2d.release.asm.js  box2d.release.wasm.js  box2d.release.wasm.wasm
emscripten/bullet/: bullet.asm.js  bullet.d.ts  bullet.debug.wasm.js  bullet.release.asm.js  bullet.release.asm.js.mem  bullet.release.wasm.js  bullet.release.wasm.wasm  bullet.wasm
emscripten/meshopt/: meshopt_decoder.asm.js  meshopt_decoder.d.ts  meshopt_decoder.wasm.js  meshopt_decoder.wasm.wasm
emscripten/physx/: phy.d.ts  physx.d.ts  physx.debug.wasm.js  physx.release.wasm.js  physx.release.wasm.wasm
emscripten/spine/: spine.asm.js  spine.d.ts  spine.js  spine.js.mem  spine.wasm  spine.wasm.fallback.js  spine.wasm.js
emscripten/webgpu/: glslang.js  glslang.wasm  spirv-tools.d.ts  spirv-tools.js  spirv-tools.wasm  webgpu.d.ts  webgpu_wasm.js  webgpu_wasm.wasm
ios/: CMakeLists.txt
ios/include/anysdk/: UserWrapper.h
ios/include/anysdk/appstore/: AdsWrapper.h  InterfaceShare.h  PluginApplicationDelegate.h  ProtocolAdTracking.h  ProtocolAds.h  ProtocolYAP.h  YAPWrapper.h
ios/include/anysdk/jailbreak/: AgentManager.h  InterfaceAdTracking.h  InterfaceYAP.h  PluginWrapper.h
ios/include/cocos-analytics/: CAAccount.h  CAAgent.h  CAEvent.h  CAItem.h  CALevels.h  CAPeiment.h  CATask.h  CAVirtual.h
ios/include/openssl/: opensslconf.h
ios/include/websockets/: lws_config.h
linux/: CMakeLists.txt
linux/include/libwebsockets/: lws_config.h
linux/include/openssl/openssl/: bio.h  configuration.h  (+4 more)
linux/lib/: libmpg123.la  libout123.la  libout123.so.0  libsyn123.la
linux/lib/jpeg/: libjpeg.la  libjpeg.so.9.4.0
linux/lib/libpng/: libpng16.so.16.37.0
linux/lib/libuv/: libuv.so.1.0.0
linux/lib/libwebsockets/: libwebsockets.so.12
linux/lib/libz/: libz.so.1.2.11
linux/lib/mpg123/: libmpg123.la  libmpg123.so.0.46.4  libout123.la  libout123.so.0.4.2  libsyn123.la  libsyn123.so.0.1.4
linux/lib/openssl/: libcrypto.so.1.1  libssl.so.1.1  libssl.so.3
linux/lib/sdl2/: libSDL2-2.0.so.0
linux/lib/sqlite/: libsqlite3.la
linux/qnx/lib/: .gitignore
mac/: CMakeLists.txt
mac/include/: SDL_config.h
mac/include/SDL2/: SDL_config.h  SDL_revision.h
mac/include/jpeg/: jmorecfg.h
mac/include/openssl/: opensslconf.h
mac/include/websockets/: lws_config.h
mac/libs/: libEGL.dylib  libSDL2-2.0.0.dylib
ohos/: CMakeLists.txt
ohos/arm64-v8a/include/: libwebsockets.h  lws_config.h  mpg123.h
ohos/arm64-v8a/lib/: libmpg123.la
ohos/x86_64/include/: lws_config.h
openharmony/: CMakeLists.txt
sources/SocketRocket/: CMakeLists.txt  SRWebSocket.m
sources/android-gamesdk/GameController/: CMakeLists.txt  GameController.cpp  GameController.h  GameControllerDeviceInfo.cpp  GameControllerDeviceInfo.h  GameControllerGameActivityMirror.h  GameControllerInternalConstants.h  GameControllerLog.cpp  GameControllerLog.h  GameControllerLogStrings.h  GameControllerManager.cpp  GameControllerManager.h  GameControllerMappingUtils.cpp  InternalControllerTable.cpp  InternalControllerTable.h  Log.h  ThreadUtil.h  paddleboat_c.cpp
sources/cjson/: CMakeLists.txt
sources/google-breakpad/: CMakeLists.txt
sources/jemalloc/: CMakeLists.txt
sources/node_napi/: CMakeLists.txt  README.md  js_native_api.h  js_native_api_util.h  js_native_api_v8.cc  js_native_api_v8.h  js_native_api_v8_internals.h
sources/tommyds/: CMakeLists.txt  tommytypes.h
win32/: CMakeLists.txt
win32/include/jpeg/: jmorecfg.h
win32/include/openssl/: opensslconf.h
win32/libs/: libcrypto.lib  libjpeg.lib  libpng16.lib  libssl.lib  libtcmalloc_minimal.lib  libzlib.lib  tbb.lib  tbbmalloc.lib  tbbmalloc_proxy.lib  v8.dll.lib  v8_libbase.dll.lib  v8_libplatform.dll.lib
win32/libs/PhysX/: PhysXCooking_static_32.lib
win32/libs/glslang/: GenericCodeGen.lib  GenericCodeGend.lib  HLSL.lib  OGLCompiler.lib  OGLCompilerd.lib  OSDependent.lib  OSDependentd.lib  SPIRV.lib  SPVRemapper.lib  SPVRemapperd.lib  glslang-default-resource-limits.lib  glslang-default-resource-limitsd.lib  glslang.lib  glslangd.lib
win32/libs/tbb/: tbb_static.lib  tbb_static_debug.lib  tbbmalloc_proxy_static.lib  tbbmalloc_proxy_static_debug.lib  tbbmalloc_static.lib  tbbmalloc_static_debug.lib
win64/: CMakeLists.txt
win64/include/SDL2/: SDL_config.h
win64/include/curl/: curl.h
win64/include/mpg123/: mpg123.h.in
win64/include/openalSoft/: al.h  alc.h
win64/include/uv/: uv.h
win64/include/websockets/: lws_config.h
win64/libs/: GlU32.Lib  OpenAL32.lib  SDL2.lib  SDL2main.lib  charset.lib  freetype.lib  glew32.lib  iconv.lib  jpeg.lib  libcurl.lib  libmpg123-0.lib  libmpg123.lib  libpng16.lib  libtcmalloc_minimal.lib  libuv.lib  libwavpack.lib  libwavpack_d.lib  libwebpmux.lib  log.txt  ogg.lib  pthreadVC3.lib  pthreadVCE3.lib  pthreadVSE3.lib  samplerate.lib  sqlite3.lib  tbb.lib  tbbmalloc.lib  tbbmalloc_proxy.lib  vorbis.lib  vorbisenc.lib  vorbisfile.lib  webp.lib  webpdecoder.lib  webpdemux.lib  websockets.lib  zlib.lib
win64/libs/PhysX/: PhysXCooking_static_64.lib  PhysXFoundation_static_64.lib
win64/libs/glslang/: GenericCodeGen.lib  GenericCodeGend.lib  HLSL.lib  HLSLd.lib  OGLCompiler.lib  OGLCompilerd.lib  OSDependent.lib  OSDependentd.lib  SPIRV.lib  SPVRemapper.lib  glslang-default-resource-limits.lib  glslang-default-resource-limitsd.lib  glslang.lib  glslangd.lib
win64/libs/tbb/: tbbmalloc_proxy_static.lib  tbbmalloc_proxy_static_debug.lib  tbbmalloc_static.lib  tbbmalloc_static_debug.lib
(+275 files in other folders)
